# makehuman_gazebo_retargeting

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
.github/: motionbuilder_skeleton
.github/docs/: collisions.md  datasets.md  retargeting_pipeline.md
blender/: empty.blend
datasets/: JJ_JointTorsoF_MotionBuilderT.bvh  jacks.bvh
launch/: spawn_actor.launch
models/default_actor/: model.config
models/demo_actor/: collisions.sdf  model.config
rviz/: demo_actor.rviz
scripts/actor/: actor.py  gazebo_model_tf_publisher.py  skeleton_visualizer.py  spawn_actor.py
scripts/installation/: install_blender.sh  install_blender_addons.py  install_blender_addons.sh  install_makehuman.sh
scripts/retarget/: retarget_human.py  retarget_human.sh
src/: ActorCollisionsPlugin.cc
worlds/: test.world
