<?xml version="1.0"?>
<package format="2">
  <name>makehuman_gazebo_retarget</name>
  <version>0.0.1</version>
  <description>The makehuman_gazebo_retarget package</description>

  <maintainer email="lucafortini60@gmail.com">luca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
